Update index.html structure and footer

--- a/index.html
+++ b/index.html
@@ -8,18 +8,21 @@
   <body>
     <!-- Header -->
     <header>
-      <a href="/">WebStudio</a>
-
       <nav>
+        <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="#studio">Studio</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#contacts">Contacts</a></li>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
         </ul>
       </nav>
 
-      <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-      <a href="tel:+110001111111">+11 (000) 111-11-11</a>
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
     </header>
 
     <!-- Main -->
@@ -68,32 +71,36 @@
         <ul>
           <li>
             <img
-              src="images/avatar/Mark_Guerrero.jpg"
-              width="270"
+              src="./images/avatar/Mark_Guerrero.jpg"
               alt="Mark Guerrero"
+              width="264"
             />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
-            <img src="images/avatar/Tom_Ford.jpg" width="270" alt="Tom Ford" />
+            <img
+              src="./images/avatar/Tom_Ford.jpg"
+              alt="Tom Ford"
+              width="264"
+            />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
             <img
-              src="images/avatar/Camila_Garcia.jpg"
-              width="270"
+              src="./images/avatar/Camila_Garcia.jpg"
               alt="Camila Garcia"
+              width="264"
             />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
             <img
-              src="images/avatar/Daniel_Willson.jpg"
-              width="270"
+              src="./images/avatar/Daniel_Willson.jpg"
               alt="Daniel Wilson"
+              width="264"
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
@@ -101,24 +108,13 @@
         </ul>
       </section>
     </main>
-
     <!-- Footer -->
     <footer>
-      <a href="/" class="footerlogo">WebStudio</a>
-      <address>
-        <!-- <ul>
-          <li>
-            <a
-              href="https://goo.gl/maps/dPpn7roWjJwvLckz8"
-              target="_blank"
-              rel="noopener noreferrer"
-              >695 Park Ave, New York, NY 10065, United States</a
-            >
-          </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul> -->
-      </address>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
     </footer>
   </body>
 </html>
