--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
     <!-- Header -->
@@ -65,7 +77,7 @@
           </li>
         </ul>
       </section>
-
+      <!-- our team -->
       <section>
         <h2>Our Team</h2>
         <ul>
@@ -104,6 +116,46 @@
             />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <!-- our portfolio -->
+      <section class="our-portfolio">
+        <h2 class="section-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
+            <img
+              src="images/apps/banking-app.jpg"
+              alt="Project 1"
+              width="300"
+            />
+            <h3 class="portfolio-title">Banking App</h3>
+            <p class="portfolio-description">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img src="images/apps/payment.jpg" alt="Project 2" width="300" />
+            <h3 class="portfolio-title">Cashless Payment</h3>
+            <p class="portfolio-description">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img src="images/apps/meditaion.jpg" alt="Project 3" width="300" />
+            <h3 class="portfolio-title">Mediation App</h3>
+            <p class="portfolio-description">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img src="images/apps/taxowka.jpg" alt="Project 4" width="300" />
+            <h3 class="portfolio-title">Taxi Service</h3>
+            <p class="portfolio-description">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img src="images/apps/screenilu.jpg" alt="Project 5" width="300" />
+            <h3 class="portfolio-title">Screen Ilustration</h3>
+            <p class="portfolio-description">Design</p>
+          </li>
+          <li class="portfolio-item">
+            <img src="images/apps/courses.jpg" alt="Project 6" width="300" />
+            <h3 class="portfolio-title">Online Courses</h3>
+            <p class="portfolio-description">Marketing</p>
           </li>
         </ul>
       </section>
