--- a/index.html
+++ b/index.html
@@ -91,23 +91,23 @@
 </main>
       <section class="our-team">
   <h2 class="section-title">Our Team</h2>
-  <ul>
-    <li>
+  <ul class="section-list">
+    <li class="section-item">
       <img src="./images/avatar/Mark_Guerrero.jpg" alt="Mark Guerrero" width="264" />
       <h3 class="team-name">Mark Guerrero</h3>
       <p class="team-role">Product Designer</p>
     </li>
-    <li>
+    <li class="section-item">
       <img src="./images/avatar/Tom_Ford.png" alt="Tom Ford" width="264" />
       <h3 class="team-name">Tom Ford</h3>
       <p class="team-role">Frontend Developer</p>
     </li>
-    <li>
+    <li class="section-item">
       <img src="./images/avatar/Camila_Garcia.png" alt="Camila Garcia" width="264" />
       <h3 class="team-name">Camila Garcia</h3>
       <p class="team-role">Marketing</p>
     </li>
-    <li>
+    <li class="section-item">
       <img src="./images/avatar/Daniel_Willson.png" alt="Daniel Wilson" width="264" />
       <h3 class="team-name">Daniel Wilson</h3>
       <p class="team-role">UI Designer</p>
