--- a/index.html
+++ b/index.html
@@ -50,107 +50,118 @@
 
     <!-- Main -->
     <main>
-  <section class="main-section">
-    <h1 class="main-title">Effective Solutions for Your Business</h1>
-    <button type="button" class="main-button">Order Service</button>
-  </section>
+      <section class="main-section">
+        <h1 class="main-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="main-button">Order Service</button>
+      </section>
 
-  <section class="advantages-section">
-    <h2 class="advantages-title">Our advantages</h2>
-    <ul class="advantages-list">
-      <li class="advantages-item">
-        <h3 class="advantages-item-title">Strategy</h3>
-        <p class="advantages-item-text">
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
-        </p>
-      </li>
-      <li class="advantages-item">
-        <h3 class="advantages-item-title">Punctuality</h3>
-        <p class="advantages-item-text">
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </p>
-      </li>
-      <li class="advantages-item">
-        <h3 class="advantages-item-title">Diligence</h3>
-        <p class="advantages-item-text">
-          Research and confirm brands with the strongest digital growth
-          opportunities and minimize risk.
-        </p>
-      </li>
-      <li class="advantages-item">
-        <h3 class="advantages-item-title">Technologies</h3>
-        <p class="advantages-item-text">
-          Design practice focused on digital experiences. We bring forth a
-          deep passion for problem-solving.
-        </p>
-      </li>
-    </ul>
-  </section>
-</main>
-    <section class="our-team">
-  <h2 class="section-title">Our Team</h2>
-  <ul class="section-list">
-    <li class="section-item">
-      <img src="./images/avatar/Mark_Guerrero.jpg" alt="Mark Guerrero" width="264" />
-      <h3 class="team-name">Mark Guerrero</h3>
-      <p class="team-role">Product Designer</p>
-    </li>
-    <li class="section-item">
-      <img src="./images/avatar/Tom_Ford.png" alt="Tom Ford" width="264" />
-      <h3 class="team-name">Tom Ford</h3>
-      <p class="team-role">Frontend Developer</p>
-    </li>
-    <li class="section-item">
-      <img src="./images/avatar/Camila_Garcia.png" alt="Camila Garcia" width="264" />
-      <h3 class="team-name">Camila Garcia</h3>
-      <p class="team-role">Marketing</p>
-    </li>
-    <li class="section-item">
-      <img src="./images/avatar/Daniel_Willson.png" alt="Daniel Wilson" width="264" />
-      <h3 class="team-name">Daniel Wilson</h3>
-      <p class="team-role">UI Designer</p>
-    </li>
-  </ul>
-</section>
-   <!-- our portfolio -->
-      <section class="our-portfolio">
-  <h2 class="section-title">Our Portfolio</h2>
-  <ul class="portfolio-list">
-    <li class="portfolio-item">
-      <img src="images/apps/banking-app.jpg" alt="Project 1" width="300" />
-      <h3 class="portfolio-title">Banking App</h3>
-      <p class="portfolio-description">App</p>
-    </li>
-    <li class="portfolio-item">
-      <img src="images/apps/payment.jpg" alt="Project 2" width="300" />
-      <h3 class="portfolio-title">Cashless Payment</h3>
-      <p class="portfolio-description">Marketing</p>
-    </li>
-    <li class="portfolio-item">
-      <img src="images/apps/meditaion.jpg" alt="Project 3" width="300" />
-      <h3 class="portfolio-title">Meditation App</h3>
-      <p class="portfolio-description">App</p>
-    </li>
-    <li class="portfolio-item">
-      <img src="images/apps/taxowka.jpg" alt="Project 4" width="300" />
-      <h3 class="portfolio-title">Taxi Service</h3>
-      <p class="portfolio-description">Marketing</p>
-    </li>
-    <li class="portfolio-item">
-      <img src="images/apps/screenilu.jpg" alt="Project 5" width="300" />
-      <h3 class="portfolio-title">Screen Illustration</h3>
-      <p class="portfolio-description">Design</p>
-    </li>
-    <li class="portfolio-item">
-      <img src="images/apps/courses.jpg" alt="Project 6" width="300" />
-      <h3 class="portfolio-title">Online Courses</h3>
-      <p class="portfolio-description">Marketing</p>
-    </li>
-  </ul>
-</section>
+      <section class="advantages-section">
+        <h2 class="advantages-title">Our advantages</h2>
+        <ul class="advantages-list">
+          <li class="advantages-item">
+            <h3 class="advantages-item-title">Strategy</h3>
+            <p class="advantages-item-text">
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-item-title">Punctuality</h3>
+            <p class="advantages-item-text">
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-item-title">Diligence</h3>
+            <p class="advantages-item-text">
+              Research and confirm brands with the strongest digital growth
+              opportunities and minimize risk.
+            </p>
+          </li>
+          <li class="advantages-item">
+            <h3 class="advantages-item-title">Technologies</h3>
+            <p class="advantages-item-text">
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
     </main>
+    <section class="our-team">
+      <h2 class="section-title">Our Team</h2>
+      <ul class="section-list">
+        <li class="section-item">
+          <img
+            src="./images/avatar/Mark_Guerrero.jpg"
+            alt="Mark Guerrero"
+            width="264"
+          />
+          <h3 class="team-name">Mark Guerrero</h3>
+          <p class="team-role">Product Designer</p>
+        </li>
+        <li class="section-item">
+          <img src="./images/avatar/Tom_Ford.png" alt="Tom Ford" width="264" />
+          <h3 class="team-name">Tom Ford</h3>
+          <p class="team-role">Frontend Developer</p>
+        </li>
+        <li class="section-item">
+          <img
+            src="./images/avatar/Camila_Garcia.png"
+            alt="Camila Garcia"
+            width="264"
+          />
+          <h3 class="team-name">Camila Garcia</h3>
+          <p class="team-role">Marketing</p>
+        </li>
+        <li class="section-item">
+          <img
+            src="./images/avatar/Daniel_Willson.png"
+            alt="Daniel Wilson"
+            width="264"
+          />
+          <h3 class="team-name">Daniel Wilson</h3>
+          <p class="team-role">UI Designer</p>
+        </li>
+      </ul>
+    </section>
+    <!-- our portfolio -->
+    <section class="our-portfolio">
+      <h2 class="section-title">Our Portfolio</h2>
+      <ul class="portfolio-list">
+        <li class="portfolio-item">
+          <img src="images/apps/banking-app.jpg" alt="Project 1" width="300" />
+          <h3 class="portfolio-title">Banking App</h3>
+          <p class="portfolio-description">App</p>
+        </li>
+        <li class="portfolio-item">
+          <img src="images/apps/payment.jpg" alt="Project 2" width="300" />
+          <h3 class="portfolio-title">Cashless Payment</h3>
+          <p class="portfolio-description">Marketing</p>
+        </li>
+        <li class="portfolio-item">
+          <img src="images/apps/meditaion.jpg" alt="Project 3" width="300" />
+          <h3 class="portfolio-title">Meditation App</h3>
+          <p class="portfolio-description">App</p>
+        </li>
+        <li class="portfolio-item">
+          <img src="images/apps/taxowka.jpg" alt="Project 4" width="300" />
+          <h3 class="portfolio-title">Taxi Service</h3>
+          <p class="portfolio-description">Marketing</p>
+        </li>
+        <li class="portfolio-item">
+          <img src="images/apps/screenilu.jpg" alt="Project 5" width="300" />
+          <h3 class="portfolio-title">Screen Illustration</h3>
+          <p class="portfolio-description">Design</p>
+        </li>
+        <li class="portfolio-item">
+          <img src="images/apps/courses.jpg" alt="Project 6" width="300" />
+          <h3 class="portfolio-title">Online Courses</h3>
+          <p class="portfolio-description">Marketing</p>
+        </li>
+      </ul>
+    </section>
     <!-- Footer -->
     <footer>
       <a href="./index.html">WebStudio</a>
