--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </section>
     </main>
     <section class="our-team">
-      <h2 class="section-title">Our Team</h2>
+      <h2 class="section-title main">Our Team</h2>
       <ul class="section-list">
         <li class="section-item">
           <img
@@ -163,9 +163,11 @@
       </ul>
     </section>
     <!-- Footer -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer-main">
+      <a class="footer-logo" href="./index.html"
+        >Web<span class="footer-span">Studio</span></a
+      >
+      <p class="footer-title">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
