--- a/index.html
+++ b/index.html
@@ -88,80 +88,88 @@
           </li>
         </ul>
       </section>
+      <section class="our-team">
+        <h2 class="section-title main">Our Team</h2>
+        <ul class="section-list">
+          <li class="section-item">
+            <img
+              src="./images/avatar/Mark_Guerrero.jpg"
+              alt="Mark Guerrero"
+              width="264"
+            />
+            <h3 class="team-name">Mark Guerrero</h3>
+            <p class="team-role">Product Designer</p>
+          </li>
+          <li class="section-item">
+            <img
+              src="./images/avatar/Tom_Ford.png"
+              alt="Tom Ford"
+              width="264"
+            />
+            <h3 class="team-name">Tom Ford</h3>
+            <p class="team-role">Frontend Developer</p>
+          </li>
+          <li class="section-item">
+            <img
+              src="./images/avatar/Camila_Garcia.png"
+              alt="Camila Garcia"
+              width="264"
+            />
+            <h3 class="team-name">Camila Garcia</h3>
+            <p class="team-role">Marketing</p>
+          </li>
+          <li class="section-item">
+            <img
+              src="./images/avatar/Daniel_Willson.png"
+              alt="Daniel Wilson"
+              width="264"
+            />
+            <h3 class="team-name">Daniel Wilson</h3>
+            <p class="team-role">UI Designer</p>
+          </li>
+        </ul>
+      </section>
+      <!-- our portfolio -->
+      <section class="our-portfolio">
+        <h2 class="section-title">Our Portfolio</h2>
+        <ul class="portfolio-list">
+          <li class="portfolio-item">
+            <img
+              src="images/apps/banking-app.jpg"
+              alt="Project 1"
+              width="300"
+            />
+            <h3 class="portfolio-title">Banking App</h3>
+            <p class="portfolio-description">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img src="images/apps/payment.jpg" alt="Project 2" width="300" />
+            <h3 class="portfolio-title">Cashless Payment</h3>
+            <p class="portfolio-description">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img src="images/apps/meditaion.jpg" alt="Project 3" width="300" />
+            <h3 class="portfolio-title">Meditation App</h3>
+            <p class="portfolio-description">App</p>
+          </li>
+          <li class="portfolio-item">
+            <img src="images/apps/taxowka.jpg" alt="Project 4" width="300" />
+            <h3 class="portfolio-title">Taxi Service</h3>
+            <p class="portfolio-description">Marketing</p>
+          </li>
+          <li class="portfolio-item">
+            <img src="images/apps/screenilu.jpg" alt="Project 5" width="300" />
+            <h3 class="portfolio-title">Screen Illustration</h3>
+            <p class="portfolio-description">Design</p>
+          </li>
+          <li class="portfolio-item">
+            <img src="images/apps/courses.jpg" alt="Project 6" width="300" />
+            <h3 class="portfolio-title">Online Courses</h3>
+            <p class="portfolio-description">Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
-    <section class="our-team">
-      <h2 class="section-title main">Our Team</h2>
-      <ul class="section-list">
-        <li class="section-item">
-          <img
-            src="./images/avatar/Mark_Guerrero.jpg"
-            alt="Mark Guerrero"
-            width="264"
-          />
-          <h3 class="team-name">Mark Guerrero</h3>
-          <p class="team-role">Product Designer</p>
-        </li>
-        <li class="section-item">
-          <img src="./images/avatar/Tom_Ford.png" alt="Tom Ford" width="264" />
-          <h3 class="team-name">Tom Ford</h3>
-          <p class="team-role">Frontend Developer</p>
-        </li>
-        <li class="section-item">
-          <img
-            src="./images/avatar/Camila_Garcia.png"
-            alt="Camila Garcia"
-            width="264"
-          />
-          <h3 class="team-name">Camila Garcia</h3>
-          <p class="team-role">Marketing</p>
-        </li>
-        <li class="section-item">
-          <img
-            src="./images/avatar/Daniel_Willson.png"
-            alt="Daniel Wilson"
-            width="264"
-          />
-          <h3 class="team-name">Daniel Wilson</h3>
-          <p class="team-role">UI Designer</p>
-        </li>
-      </ul>
-    </section>
-    <!-- our portfolio -->
-    <section class="our-portfolio">
-      <h2 class="section-title">Our Portfolio</h2>
-      <ul class="portfolio-list">
-        <li class="portfolio-item">
-          <img src="images/apps/banking-app.jpg" alt="Project 1" width="300" />
-          <h3 class="portfolio-title">Banking App</h3>
-          <p class="portfolio-description">App</p>
-        </li>
-        <li class="portfolio-item">
-          <img src="images/apps/payment.jpg" alt="Project 2" width="300" />
-          <h3 class="portfolio-title">Cashless Payment</h3>
-          <p class="portfolio-description">Marketing</p>
-        </li>
-        <li class="portfolio-item">
-          <img src="images/apps/meditaion.jpg" alt="Project 3" width="300" />
-          <h3 class="portfolio-title">Meditation App</h3>
-          <p class="portfolio-description">App</p>
-        </li>
-        <li class="portfolio-item">
-          <img src="images/apps/taxowka.jpg" alt="Project 4" width="300" />
-          <h3 class="portfolio-title">Taxi Service</h3>
-          <p class="portfolio-description">Marketing</p>
-        </li>
-        <li class="portfolio-item">
-          <img src="images/apps/screenilu.jpg" alt="Project 5" width="300" />
-          <h3 class="portfolio-title">Screen Illustration</h3>
-          <p class="portfolio-description">Design</p>
-        </li>
-        <li class="portfolio-item">
-          <img src="images/apps/courses.jpg" alt="Project 6" width="300" />
-          <h3 class="portfolio-title">Online Courses</h3>
-          <p class="portfolio-description">Marketing</p>
-        </li>
-      </ul>
-    </section>
     <!-- Footer -->
     <footer class="footer-main">
       <a class="footer-logo" href="./index.html"
