--- a/index.html
+++ b/index.html
@@ -131,39 +131,39 @@
       </section>
       <!-- our portfolio -->
       <section class="our-portfolio">
+        <img src="./images/apps/banking-app.jpg" alt="Project 1" width="300" />
         <h2 class="section-title">Our Portfolio</h2>
         <ul class="portfolio-list">
           <li class="portfolio-item">
-            <img
-              src="images/apps/banking-app.jpg"
-              alt="Project 1"
-              width="300"
-            />
-            <h3 class="portfolio-title">Banking App</h3>
-            <p class="portfolio-description">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="images/apps/payment.jpg" alt="Project 2" width="300" />
+            <img src="./images/apps/payment.jpg" alt="Project 2" width="300" />
             <h3 class="portfolio-title">Cashless Payment</h3>
             <p class="portfolio-description">Marketing</p>
           </li>
           <li class="portfolio-item">
-            <img src="images/apps/meditaion.jpg" alt="Project 3" width="300" />
+            <img
+              src="./images/apps/meditaion.jpg"
+              alt="Project 3"
+              width="300"
+            />
             <h3 class="portfolio-title">Meditation App</h3>
             <p class="portfolio-description">App</p>
           </li>
           <li class="portfolio-item">
-            <img src="images/apps/taxowka.jpg" alt="Project 4" width="300" />
+            <img src="./images/apps/taxowka.jpg" alt="Project 4" width="300" />
             <h3 class="portfolio-title">Taxi Service</h3>
             <p class="portfolio-description">Marketing</p>
           </li>
           <li class="portfolio-item">
-            <img src="images/apps/screenilu.jpg" alt="Project 5" width="300" />
+            <img
+              src="./images/apps/screenilu.jpg"
+              alt="Project 5"
+              width="300"
+            />
             <h3 class="portfolio-title">Screen Illustration</h3>
             <p class="portfolio-description">Design</p>
           </li>
           <li class="portfolio-item">
-            <img src="images/apps/courses.jpg" alt="Project 6" width="300" />
+            <img src="./images/apps/courses.jpg" alt="Project 6" width="300" />
             <h3 class="portfolio-title">Online Courses</h3>
             <p class="portfolio-description">Marketing</p>
           </li>
