--- a/index.html
+++ b/index.html
@@ -131,11 +131,11 @@
       </section>
       <!-- our portfolio -->
       <section class="our-portfolio">
-        <img src="./images/apps/banking-app.jpg" alt="Project 1" width="300" />
+        <img src="./images/apps/bankingapp1.jpg" alt="Project 1" width="360" />
         <h2 class="section-title">Our Portfolio</h2>
         <ul class="portfolio-list">
           <li class="portfolio-item">
-            <img src="./images/apps/payment.jpg" alt="Project 2" width="300" />
+            <img src="./images/apps/payment.jpg" alt="Project 2" width="360" />
             <h3 class="portfolio-title">Cashless Payment</h3>
             <p class="portfolio-description">Marketing</p>
           </li>
@@ -143,13 +143,13 @@
             <img
               src="./images/apps/meditaion.jpg"
               alt="Project 3"
-              width="300"
+              width="360"
             />
             <h3 class="portfolio-title">Meditation App</h3>
             <p class="portfolio-description">App</p>
           </li>
           <li class="portfolio-item">
-            <img src="./images/apps/taxowka.jpg" alt="Project 4" width="300" />
+            <img src="./images/apps/taxowka.jpg" alt="Project 4" width="360" />
             <h3 class="portfolio-title">Taxi Service</h3>
             <p class="portfolio-description">Marketing</p>
           </li>
@@ -163,7 +163,7 @@
             <p class="portfolio-description">Design</p>
           </li>
           <li class="portfolio-item">
-            <img src="./images/apps/courses.jpg" alt="Project 6" width="300" />
+            <img src="./images/apps/courses1.jpg" alt="Project 6" width="360" />
             <h3 class="portfolio-title">Online Courses</h3>
             <p class="portfolio-description">Marketing</p>
           </li>
