--- a/index.html
+++ b/index.html
@@ -131,14 +131,10 @@
       </section>
       <!-- our portfolio -->
       <section class="our-portfolio">
+        <img src="./images/apps/bankingapp1.jpg" alt="Project 1" width="360" />
         <h2 class="section-title">Our Portfolio</h2>
         <ul class="portfolio-list">
           <li class="portfolio-item">
-            <img
-              src="./images/apps/bankingapp1.jpg"
-              alt="Project 1"
-              width="360"
-            />
             <h3 class="portfolio-title">Banking App</h3>
             <p class="portfolio-description">App</p>
           </li>
