--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           </li>
           <li class="portfolio-item">
             <img src="images/apps/screenilu.jpg" alt="Project 5" width="360" />
-            <h3 class="portfolio-title">Screen Illustration</h3>
+            <h3 class="portfolio-title">Screen Illustrations</h3>
             <p class="portfolio-description">Design</p>
           </li>
           <li class="portfolio-item">
