--- a/index.html
+++ b/index.html
@@ -143,27 +143,35 @@
             <p class="portfolio-description">App</p>
           </li>
           <li class="portfolio-item">
-            <img src="images/apps/payment.jpg" alt="Project 2" width="360" />
+            <img src="./images/apps/payment.jpg" alt="Project 2" width="360" />
             <h3 class="portfolio-title">Cashless Payment</h3>
             <p class="portfolio-description">Marketing</p>
           </li>
           <li class="portfolio-item">
-            <img src="images/apps/meditaion.jpg" alt="Project 3" width="360" />
+            <img
+              src="./images/apps/meditaion.jpg"
+              alt="Project 3"
+              width="360"
+            />
             <h3 class="portfolio-title">Meditation App</h3>
             <p class="portfolio-description">App</p>
           </li>
           <li class="portfolio-item">
-            <img src="images/apps/taxowka.jpg" alt="Project 4" width="360" />
+            <img src="./images/apps/taxowka.jpg" alt="Project 4" width="360" />
             <h3 class="portfolio-title">Taxi Service</h3>
             <p class="portfolio-description">Marketing</p>
           </li>
           <li class="portfolio-item">
-            <img src="images/apps/screenilu.jpg" alt="Project 5" width="360" />
+            <img
+              src="./images/apps/screenilu.jpg"
+              alt="Project 5"
+              width="360"
+            />
             <h3 class="portfolio-title">Screen Illustrations</h3>
             <p class="portfolio-description">Design</p>
           </li>
           <li class="portfolio-item">
-            <img src="images/apps/courses1.jpg" alt="Project 6" width="360" />
+            <img src="./images/apps/courses1.jpg" alt="Project 6" width="360" />
             <h3 class="portfolio-title">Online Courses</h3>
             <p class="portfolio-description">Marketing</p>
           </li>
