--- a/index.html
+++ b/index.html
@@ -1,192 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
-      integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="css/main.css" />
-  </head>
-  <body>
-    <!-- Header -->
-    <header>
-      <nav>
-        <a href="#" class="web-logo">
-          Web<span class="logo-text">Studio</span>
-        </a>
 
-        <ul>
-          <li><a href="./index.html" class="nav-link">Studio</a></li>
-          <li><a href="" class="nav-link">Portfolio</a></li>
-          <li><a href="" class="nav-link">Contacts</a></li>
-        </ul>
-      </nav>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WebStudio</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+    rel="stylesheet" />
+  <link rel="stylesheet" href="css/main.css" />
+</head>
 
-      <address class="contact-info">
-        <ul>
-          <li>
-            <a href="mailto:info@devstudio.com" class="contact-link"
-              >info@devstudio.com</a
-            >
-          </li>
-          <li>
-            <a href="tel:+110001111111" class="contact-link"
-              >+11 (000) 111-11-11</a
-            >
-          </li>
-        </ul>
-      </address>
-    </header>
+<body>
+  <!-- Header -->
+  <header>
+    <nav>
+      <a href="#" class="web-logo">
+        Web<span class="logo-text">Studio</span>
+      </a>
 
-    <!-- Main -->
-    <main>
-      <section class="main-section">
-        <h1 class="main-title">Effective Solutions for Your Business</h1>
-        <button type="button" class="main-button">Order Service</button>
-      </section>
+      <ul>
+        <li><a href="./index.html" class="nav-link">Studio</a></li>
+        <li><a href="" class="nav-link">Portfolio</a></li>
+        <li><a href="" class="nav-link">Contacts</a></li>
+      </ul>
+    </nav>
 
-      <section class="advantages-section">
-        <h2 class="advantages-title">Our advantages</h2>
-        <ul class="advantages-list">
-          <li class="advantages-item">
-            <h3 class="advantages-item-title">Strategy</h3>
-            <p class="advantages-item-text">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-item-title">Punctuality</h3>
-            <p class="advantages-item-text">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-item-title">Diligence</h3>
-            <p class="advantages-item-text">
-              Research and confirm brands with the strongest digital growth
-              opportunities and minimize risk.
-            </p>
-          </li>
-          <li class="advantages-item">
-            <h3 class="advantages-item-title">Technologies</h3>
-            <p class="advantages-item-text">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
-      </section>
-      <section class="our-team">
-        <h2 class="section-title main">Our Team</h2>
-        <ul class="section-list">
-          <li class="section-item">
-            <img
-              src="./images/avatar/Mark_Guerrero.jpg"
-              alt="Mark Guerrero"
-              width="264"
-            />
-            <h3 class="team-name">Mark Guerrero</h3>
-            <p class="team-role">Product Designer</p>
-          </li>
-          <li class="section-item">
-            <img
-              src="./images/avatar/Tom_Ford.png"
-              alt="Tom Ford"
-              width="264"
-            />
-            <h3 class="team-name">Tom Ford</h3>
-            <p class="team-role">Frontend Developer</p>
-          </li>
-          <li class="section-item">
-            <img
-              src="./images/avatar/Camila_Garcia.png"
-              alt="Camila Garcia"
-              width="264"
-            />
-            <h3 class="team-name">Camila Garcia</h3>
-            <p class="team-role">Marketing</p>
-          </li>
-          <li class="section-item">
-            <img
-              src="./images/avatar/Daniel_Willson.png"
-              alt="Daniel Wilson"
-              width="264"
-            />
-            <h3 class="team-name">Daniel Wilson</h3>
-            <p class="team-role">UI Designer</p>
-          </li>
-        </ul>
-      </section>
-      <!-- our portfolio -->
-      <section class="our-portfolio">
-        <h2 class="section-title">Our Portfolio</h2>
-        <ul class="portfolio-list">
-          <li class="portfolio-item">
-            <img
-              src="./images/apps/bankingapp1.jpg"
-              alt="Project 1"
-              width="360"
-            />
-            <h3 class="portfolio-title">Banking App</h3>
-            <p class="portfolio-description">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/apps/payment.jpg" alt="Project 2" width="360" />
-            <h3 class="portfolio-title">Cashless Payment</h3>
-            <p class="portfolio-description">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/apps/meditaion.jpg"
-              alt="Project 3"
-              width="360"
-            />
-            <h3 class="portfolio-title">Meditation App</h3>
-            <p class="portfolio-description">App</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/apps/taxowka.jpg" alt="Project 4" width="360" />
-            <h3 class="portfolio-title">Taxi Service</h3>
-            <p class="portfolio-description">Marketing</p>
-          </li>
-          <li class="portfolio-item">
-            <img
-              src="./images/apps/screenilu.jpg"
-              alt="Project 5"
-              width="360"
-            />
-            <h3 class="portfolio-title">Screen Illustrations</h3>
-            <p class="portfolio-description">Design</p>
-          </li>
-          <li class="portfolio-item">
-            <img src="./images/apps/courses1.jpg" alt="Project 6" width="360" />
-            <h3 class="portfolio-title">Online Courses</h3>
-            <p class="portfolio-description">Marketing</p>
-          </li>
-        </ul>
-      </section>
-    </main>
-    <!-- Footer -->
-    <footer class="footer-main">
-      <a class="footer-logo" href="./index.html"
-        >Web<span class="footer-span">Studio</span></a
-      >
-      <p class="footer-title">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
-    </footer>
-  </body>
+    <address class="contact-info">
+      <ul>
+        <li>
+          <a href="mailto:info@devstudio.com" class="contact-link">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="tel:+110001111111" class="contact-link">+11 (000) 111-11-11</a>
+        </li>
+      </ul>
+    </address>
+  </header>
+
+  <!-- Main -->
+  <main>
+    <section class="main-section">
+      <h1 class="main-title">Effective Solutions for Your Business</h1>
+      <button type="button" class="main-button">Order Service</button>
+    </section>
+
+    <section class="advantages-section">
+      <h2 class="advantages-title">Our advantages</h2>
+      <ul class="advantages-list">
+        <li class="advantages-item">
+          <h3 class="advantages-item-title">Strategy</h3>
+          <p class="advantages-item-text">
+            Our goal is to identify the business problem to walk away with the
+            perfect and creative solution.
+          </p>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-item-title">Punctuality</h3>
+          <p class="advantages-item-text">
+            Bring the key message to the brand's audience for the best price
+            within the shortest possible time.
+          </p>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-item-title">Diligence</h3>
+          <p class="advantages-item-text">
+            Research and confirm brands with the strongest digital growth
+            opportunities and minimize risk.
+          </p>
+        </li>
+        <li class="advantages-item">
+          <h3 class="advantages-item-title">Technologies</h3>
+          <p class="advantages-item-text">
+            Design practice focused on digital experiences. We bring forth a
+            deep passion for problem-solving.
+          </p>
+        </li>
+      </ul>
+    </section>
+    <section class="our-team">
+      <h2 class="section-title main">Our Team</h2>
+      <ul class="section-list">
+        <li class="section-item">
+          <img src="./images/avatar/Mark_Guerrero.jpg" alt="Mark Guerrero" width="264" />
+          <h3 class="team-name">Mark Guerrero</h3>
+          <p class="team-role">Product Designer</p>
+        </li>
+        <li class="section-item">
+          <img src="./images/avatar/Tom_Ford.png" alt="Tom Ford" width="264" />
+          <h3 class="team-name">Tom Ford</h3>
+          <p class="team-role">Frontend Developer</p>
+        </li>
+        <li class="section-item">
+          <img src="./images/avatar/Camila_Garcia.png" alt="Camila Garcia" width="264" />
+          <h3 class="team-name">Camila Garcia</h3>
+          <p class="team-role">Marketing</p>
+        </li>
+        <li class="section-item">
+          <img src="./images/avatar/Daniel_Willson.png" alt="Daniel Wilson" width="264" />
+          <h3 class="team-name">Daniel Wilson</h3>
+          <p class="team-role">UI Designer</p>
+        </li>
+      </ul>
+    </section>
+    <!-- our portfolio -->
+    <section class="our-portfolio">
+      <h2 class="section-title">Our Portfolio</h2>
+      <ul class="portfolio-list">
+        <li class="portfolio-item"><img src="./images/apps/bankingapp1.jpg" alt="Project 1" width="360" />
+          <h3 class="portfolio-title">Banking App</h3>
+          <p class="portfolio-description">App</p>
+        </li>
+        <li class="portfolio-item"><img src="./images/apps/payment.jpg" alt="Project 2" width="360" />
+          <h3 class="portfolio-title">Cashless Payment</h3>
+          <p class="portfolio-description">Marketing</p>
+        </li>
+        <li class="portfolio-item"><img src="./images/apps/meditaion.jpg" alt="Project 3" width="360" />
+          <h3 class="portfolio-title">Meditation App</h3>
+          <p class="portfolio-description">App</p>
+        </li>
+        <li class="portfolio-item"><img src="./images/apps/taxowka.jpg" alt="Project 4" width="360" />
+          <h3 class="portfolio-title">Taxi Service</h3>
+          <p class="portfolio-description">Marketing</p>
+        </li>
+        <li class="portfolio-item"><img src="./images/apps/screenilu.jpg" alt="Project 5" width="360" />
+          <h3 class="portfolio-title">Screen Illustrations</h3>
+          <p class="portfolio-description">Design</p>
+        </li>
+        <li class="portfolio-item"><img src="./images/apps/courses1.jpg" alt="Project 6" width="360" />
+          <h3 class="portfolio-title">Online Courses</h3>
+          <p class="portfolio-description">Marketing</p>
+        </li>
+      </ul>
+    </section>
+  </main>
+  <!-- Footer -->
+  <footer class="footer-main">
+    <a class="footer-logo" href="./index.html">Web<span class="footer-span">Studio</span></a>
+    <p class="footer-title">
+      Increase the flow of customers and sales for your business with digital
+      marketing & growth solutions.
+    </p>
+  </footer>
+</body>
+
 </html>
