--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <!-- Header -->
     <header class="page-header">
-       <div class="header-container">
+       <div class="header-container container">
       <nav class="main-navigation">
         <a href="#" class="web-logo">
           Web<span class="logo-text">Studio</span>
