--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
 
   <!-- Main -->
   <main>
-    <section class="main-section">
-      <h1 class="main-title">Effective Solutions for Your Business</h1>
-      <button type="button" class="main-button">Order Service</button>
+    <section class="hero-section">
+      <div class="container">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button type="button" class="hero-button">Order Service</button>
+      </div>
     </section>
 
     <section class="advantages-section">
