--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             Web<span class="logo-text">Studio</span>
           </a>
           <ul class="nav-menu">
-            <li><a href="./index.html" class="nav-link">Studio</a></li>
+            <li><a href="./index.html" class="nav-link current">Studio</a></li>
             <li><a href="" class="nav-link">Portfolio</a></li>
             <li><a href="" class="nav-link">Contacts</a></li>
           </ul>
