--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
         <h2 class="visually-hidden">Our advantages</h2>
         <ul class="features-list">
           <li class="features-item">
+            <div class="features-icon-container">
+              <img src="./images/iconssvg/antenna 1.svg" alt="Strategy icon" width="64" height="64">
+            </div>
             <h3 class="features-title">Strategy</h3>
             <p class="features-text">
               Our goal is to identify the business problem to walk away with the
@@ -63,6 +66,9 @@
             </p>
           </li>
           <li class="features-item">
+            <div class="features-icon-container">
+              <img src="./images/iconssvg/clock 1.svg" alt="Punctuality icon" width="64" height="64">
+            </div>
             <h3 class="features-title">Punctuality</h3>
             <p class="features-text">
               Bring the key message to the brand's audience for the best price
@@ -70,6 +76,9 @@
             </p>
           </li>
           <li class="features-item">
+            <div class="features-icon-container">
+              <img src="./images/iconssvg/diagram 1.svg" alt="Diligence icon" width="64" height="64">
+            </div>
             <h3 class="features-title">Diligence</h3>
             <p class="features-text">
               Research and confirm brands with the strongest digital growth
@@ -77,6 +86,9 @@
             </p>
           </li>
           <li class="features-item">
+            <div class="features-icon-container">
+              <img src="./images/iconssvg/astronaut 1.svg" alt="Technologies icon" width="64" height="64">
+            </div>
             <h3 class="features-title">Technologies</h3>
             <p class="features-text">
               Design practice focused on digital experiences. We bring forth a
