--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
         <ul class="features-list">
           <li class="features-item">
             <div class="features-icon-container">
-              <img src="./images/iconssvg/antenna 1.svg" alt="Strategy icon" width="64" height="64">
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-antenna"></use>
+              </svg>
             </div>
             <h3 class="features-title">Strategy</h3>
             <p class="features-text">
@@ -67,7 +69,9 @@
           </li>
           <li class="features-item">
             <div class="features-icon-container">
-              <img src="./images/iconssvg/clock 1.svg" alt="Punctuality icon" width="64" height="64">
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-clock"></use>
+              </svg>
             </div>
             <h3 class="features-title">Punctuality</h3>
             <p class="features-text">
@@ -77,7 +81,9 @@
           </li>
           <li class="features-item">
             <div class="features-icon-container">
-              <img src="./images/iconssvg/diagram 1.svg" alt="Diligence icon" width="64" height="64">
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-diagram"></use>
+              </svg>
             </div>
             <h3 class="features-title">Diligence</h3>
             <p class="features-text">
@@ -87,7 +93,9 @@
           </li>
           <li class="features-item">
             <div class="features-icon-container">
-              <img src="./images/iconssvg/astronaut 1.svg" alt="Technologies icon" width="64" height="64">
+              <svg width="64" height="64">
+                <use href="./images/icons.svg#icon-astronaut"></use>
+              </svg>
             </div>
             <h3 class="features-title">Technologies</h3>
             <p class="features-text">
