--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <li class="features-item">
             <div class="features-icon-container">
               <svg width="64" height="64">
-                <use href="./images/icons.svg#icon-astronaut"></use>
+                <use href="./images/iconssvg/sprite.svg#icon-astronaut"></use>
               </svg>
             </div>
             <h3 class="features-title">Technologies</h3>
